# rust-actix

./: .env.example  Cargo.toml  generator.sh
src/: main.rs
src/config/: default_config.rs  errors.rs  mod.rs
src/databases/: users.rs
src/handlers/: users.rs
src/models/: users.rs
