[package]
name = "actix-boilerplate"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
actix-rt = "2.8.0"
config = "0.13.1"
derive_more = "0.99.17"
dotenv = "0.15.0"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.104"
deadpool-postgres = { version = "0.10.2", features = ["serde"] }
tokio-pg-mapper = "0.2.0"
tokio-pg-mapper-derive = "0.2.0"
tokio-postgres = { version="0.7.6", features = ["with-chrono-0_4"] }
chrono = { version = "0.4", features = ["serde"] }
validator = { version = "0.16.1", features = ["derive"] }
actix-web-validator = "5.0.1"
